fixed spacing for dates

--- a/views/style.css
+++ b/views/style.css
@@ -29,4 +29,6 @@
 
 .date {
     font-size: 20px;
+    padding-top: 15px;
+    text-align: center;
 }
